--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="#FF333333"
         android:theme="@style/AppTheme.AppBarOverlay"
         app:liftOnScroll="true">
         <TextView
@@ -20,8 +20,8 @@
             android:gravity="center"
             android:minHeight="?actionBarSize"
             android:padding="@dimen/appbar_padding"
-            android:text="@string/app_name"
-            android:textColor="@color/colorOnPrimary"
+            android:text="Activity Name"
+            android:textColor="#FFFFFF"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/><!--Widget.AppCompat.Toolbar.Title" /-->
     </com.google.android.material.appbar.AppBarLayout>
     <androidx.viewpager.widget.ViewPager
@@ -47,5 +47,6 @@
         android:foregroundTint="@color/colorAccent"
         app:navigationIcon="@drawable/ic_bab_navigation"
         app:menu="@menu/bottom_navigation_menu"
-        app:hideOnScroll="true"/>
+        app:hideOnScroll="true"
+        />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
